--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
         <div class="pull-right user-info">
           <% if user_signed_in? %>
-            Signed in as: <strong><%= link_to current_user.username, current_user %></strong> |
+            Signed in as: <strong><%= link_to current_user.email, current_user %></strong> |
             <%= link_to "Edit profile", edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link' %>
           <% else %>
             <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link' %> -
