--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,21 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h2>Username: <%= @user.username %></h2>
+
+<div class="row">
+  <div class="col-md-8">
+    <div class="media">
+      <div class="media-body">
+        <h3>Your sites</h3>
+        <% if @user.registered_applications.any? %>
+          <%= @user.registered_applications %>
+        <% else %>
+          <p>There is no registered site at this time.</p>
+        <% end %>
+
+        <div class="col-md-4">
+          <%= link_to "Register a site", new_user_registered_application_path, class: 'btn btn-success' %>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
