Controller tests are not passing

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h2>Username: <%= @user.username %></h2>
+<h3>Username: <%= @user.username %></h3>
 
 <div class="row">
   <div class="col-md-8">
@@ -6,15 +6,18 @@
       <div class="media-body">
         <h3>Your sites</h3>
         <% if @user.registered_applications.any? %>
-          <%= @user.registered_applications %>
+          <% @user.registered_applications.each do |site| %>
+             <div class="media-heading">
+               <%= link_to site.name, user_registered_application_path(@user, site) %>
+             </div>
+          <% end %>
         <% else %>
           <p>There is no registered site at this time.</p>
         <% end %>
 
         <div class="col-md-4">
-          <%= link_to "Register a site", new_user_registered_application_path, class: 'btn btn-success' %>
+          <%= link_to "Register a new site", new_user_registered_application_path(@user), class: 'btn btn-success' %>
         </div>
-
       </div>
     </div>
   </div>
