--- a/app/views/registered_applications/new.html.erb
+++ b/app/views/registered_applications/new.html.erb
@@ -1,26 +1,22 @@
 <h1>Register a new site</h1>
 
-<%= form_for [current_user, @registered_application] do |f| %>
-  <% if registered_application.errors.any? %>
+<%= form_for [@user, @registered_application] do |f| %>
+  <% if @registered_application.errors.any? %>
     <div class="alert alert-danger">
-      <h4><%= pluralize(registered_application.errors.count, "error") %>.</h4>
+      <h4><%= pluralize(@registered_application.errors.count, "error") %>.</h4>
       <ul>
-        <% post.errors.full_messages.each do |msg| %>
+        <% @registered_application.errors.full_messages.each do |msg| %>
           <li><%= msg %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
 
-  <%= form_group_tag(registered_application.errors[:name]) do %>
-     <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control', placeholder: "Enter site's name here" %>
-   <% end %>
+   <%= f.label :name %>
+   <%= f.text_field :name, class: 'form-control', placeholder: "Enter site's name here" %>
 
-   <%= form_group_tag(post.errors[:URL]) do %>
-     <%= f.label :URL %>
-     <%= f.text_field :body, class: 'form-control', placeholder: "Enter site's URL here" %>
-   <% end %>
+   <%= f.label :url %>
+   <%= f.text_field :url, class: 'form-control', placeholder: "Enter site's URL here" %>
 
    <div class="form-group">
      <%= f.submit "Save", class: 'btn btn-success' %>
