--- a/app/views/registered_applications/show.html.erb
+++ b/app/views/registered_applications/show.html.erb
@@ -1,4 +1,25 @@
-<h3><strong>Site's name</strong><%= @registered_application.name %></h3>
-<h4><strong>Site's URL</strong><%= @registered_application.URL %></h4>
+<div class="row">
+  <div class="col-md-8">
+    <div class="media">
+      <div class="media-body">
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>Site</th>
+              <th>URL</th>
+            </tr>
+          </thead>
 
-<%= link_to "Delete this site", [current_user, @registered_application], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this site?'} %> 
+          <tbody>
+            <tr class="site-list">
+              <td><%= @registered_application.name %></td>
+              <td><%= @registered_application.url %></td>
+              <td><%= link_to "Delete this site", [@registered_application.user, @registered_application], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this site?'} %></td>
+            </tr>
+          </tbody>
+        </table>
+        <%= link_to "See the list of your sites", user_path %>
+      </div>
+    </div>
+  </div>
+</div>
