--- a/app/views/registered_applications/show.html.erb
+++ b/app/views/registered_applications/show.html.erb
@@ -6,7 +6,6 @@
           <thead>
             <tr>
               <th>Site</th>
-              <th>Event Count </th>
               <th>URL</th>
             </tr>
           </thead>
@@ -14,12 +13,13 @@
           <tbody>
             <tr class="site-list">
               <td><%= @registered_application.name %></td>
-              <td><%= @registered_application.events.count %></td>
               <td><%= @registered_application.url %></td>
               <td><%= link_to "Delete this site", [@registered_application.user, @registered_application], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this site?'} %></td>
             </tr>
           </tbody>
         </table>
+
+        <%= pie_chart @registered_application.events.group(:name).count %>
 
         <%= link_to "See the list of your sites", user_path %>
       </div>
