Trying to make the line graph show multiple events

--- a/app/views/registered_applications/show.html.erb
+++ b/app/views/registered_applications/show.html.erb
@@ -6,6 +6,7 @@
           <thead>
             <tr>
               <th>Site</th>
+              <th>Event Count</th>
               <th>URL</th>
             </tr>
           </thead>
@@ -13,13 +14,21 @@
           <tbody>
             <tr class="site-list">
               <td><%= @registered_application.name %></td>
+              <td><%= @registered_application.events.count %></td>
               <td><%= @registered_application.url %></td>
               <td><%= link_to "Delete this site", [@registered_application.user, @registered_application], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this site?'} %></td>
             </tr>
           </tbody>
         </table>
 
-        <%= pie_chart @registered_application.events.group(:name).count %>
+        <!-- <%= javascript_include_tag "https://www.google.com/jsapi", "chartkick" %> -->
+        <div class="col-md-12">
+          <h2><%= @registered_application.name %>
+          <p><%= link_to @registered_application.url %></p>
+
+          <%= pie_chart @registered_application.events.group(:name).count %>
+          <%= line_chart @registered_application.events.group_by_day(:created_at, dates: true).count, xtitle: "Date", ytitle: "Views" %>
+        </div>
 
         <%= link_to "See the list of your sites", user_path %>
       </div>
