Edited homepage/removed sqlite

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,3 @@
 <h1>About</h1>
-<p>Created by emico7</p>
+<h4> Blocmetrics is an analytics service which tracks events on registered websites.</h4>
+<p>Made by Emiko Dodson with her mentor at <%= link_to 'Bloc', 'https://www.bloc.io/' %></p>
