--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,9 @@
-<h1>Welcome to Blocmetrics!</h1>
 
-<p>Register your sites and keep track of the activities.</p>
+
+<div class="index-img", align=center >
+  <h1><strong>LET DATA GUIDE YOU</strong></h1>
+  <%= image_tag("meeting.jpeg")%>
+  <br/>
+  <br/>
+  <p><%= link_to "Register", new_user_registration_path, :class => 'navbar-link' %> your site today and start collecting data.</p>  
+</div>
